GITHUB-32 / GITHUB-33: migrate to Java 17 and add CDP support
- Migrated all the deps to Java 17
- Added initial CDP client integration to simplify the setup/cleanup process: basically, a user must implement CDP interface to inject CDP service into WebDriverContainer
- WebDriver and CDP metadata were moved from tuples to a separate container class to improve UX
- Fixed a bunch of tests after migration